--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
 <h1>Hello World</h1>
+Pemberitahuan: <br>
+Khusus mahasiswa yang namanya tertera di bawah ini<br>
+<strong>Rafel Siregar</strong><br>
+Masuk kuliah dimajukan menjadi hari Minggu, 10 Februari 2019.<br>
+Pemberitahuan ini adalah sebagaimana mestinya dan tidak dapat diganggu gugat.<br>
+Ttd, Panut<br>
+Tukang angkringan depan GOR Klebengan.
