--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<h1>Hello World</h1>
-Pemberitahuan: <br>
-Khusus mahasiswa yang namanya tertera di bawah ini<br>
-<strong>Rafel Siregar</strong><br>
-Masuk kuliah dimajukan menjadi hari Minggu, 10 Februari 2019.<br>
-Pemberitahuan ini adalah sebagaimana mestinya dan tidak dapat diganggu gugat.<br>
-Ttd, Panut<br>
-Tukang angkringan depan GOR Klebengan.
+<h1>AINO:serviceA1n0presensiM1p4</h1>
+simasterUGM_token:5049b42018243d59c7c5800f0b3dc3aa<br>
+device:929a50ba10df1a99<br>
+mahasiswa:18/427581/PA/18541<br>
+dosen:vw4DhUXuQMHJQRd_dXxepeUTP75SR8JB3stqmG3sCUQ=<br>
+kelas:Li-11yB1o2BEKZnHnTHDjfuEgG1NbrrMQyClgwXUMYA=<br>
+user:JjodD4Ke1byY8AbIUXgzBy3TKkfoAR5wziPBkzOSJWE=<br>
+pertemuan:4<br>
